@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-20T08:14:00Z",
-  "count_outdated" : 183,
-  "uniques_outdated" : 156,
-  "count" : 191,
-  "uniques" : 164,
+  "timestamp" : "2023-09-23T00:46:53Z",
+  "count_outdated" : 184,
+  "uniques_outdated" : 157,
+  "count" : 192,
+  "uniques" : 165,
   "clones" : [
-    {
-      "timestamp": "2023-09-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-11T00:00:00Z",
       "count": 1,
@@ -67,6 +58,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
