@@ -1,12 +1,7 @@
 {
   "count": 8,
-  "uniques": 2,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-09-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-11T00:00:00Z",
       "count": 1,
@@ -36,6 +31,11 @@
       "timestamp": "2023-09-20T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
